# vsss-sim

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: smoke.py  train.py
src/vsss_sim/: __init__.py  config.py
src/vsss_sim/agents/: __init__.py  random.py  stationary.py
src/vsss_sim/envs/: __init__.py  base.py  vsss_3v3.py
src/vsss_sim/physics/: __init__.py  numpy_backend.py
src/vsss_sim/rendering/: __init__.py  pygame.py
tests/: test_config.py  test_env.py
tests/envs/: test_env.py
tests/physics/: test_physics.py
vsss_sim/: __init__.py  env.py  physics.py  rendering.py
vsss_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
