[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsss-sim"
version = "0.1.0"
description = "IEEE VSSS 3×3 simulator for Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["robotics", "simulation", "reinforcement-learning", "vsss", "ieee"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
render = ["pygame>=2.4"]
gpu   = ["torch>=2.0"]
dev   = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/canhotuctor/vsss-sim"

[tool.setuptools.packages.find]
where   = ["."]
include = ["vsss_sim*"]

# ---------------------------------------------------------------------------
# Ruff (linter / formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # long lines allowed when unavoidable

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
